...
            modifier = Modifier.padding(horizontal = LARGER_PADDING)
        ){
            Button(
                modifier = Modifier
                    .weight(5f)
                    .semantics {
                        contentDescription = "Rules Button"
                    }
                ,
                onClick = {
                    coroutineScope.launch {
                        navigate = 3
                    }
...
            }
            Spacer(modifier = Modifier.weight(1f))
            Button(
                modifier = Modifier
                    .weight(5f)
                    .semantics {
                       contentDescription = "Play Button"
                    }
                ,
                onClick = {
                    coroutineScope.launch {
                        navigate = if(playerList.first().isNotEmpty()) 4 else 1
                    }
...
