...
            verticalAlignment = Alignment.Top,
            horizontalArrangement = Arrangement.Center
        ){
            Button(
                modifier = Modifier
                    .semantics {
                        contentDescription = "Add Player Button"
                    }
                ,
                onClick = {
                    onAddPlayerClicked()
                },
                enabled = players.size < MAX_PLAYERS
...
            verticalAlignment = Alignment.Bottom,
            horizontalArrangement = Arrangement.Center
        ) {
            Button(
                modifier = Modifier
                    .semantics {
                        contentDescription = "Lets Play Button"
                    },
                onClick = {
                    onLetsPlayClicked()
                },
            ) {
                Text(
...
